--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
       <!-- Carousel Items -->
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../Asset/jumbotron1.jpg" class="d-block w-100" alt="Slide 1"
+          <img src="Asset/jumbotron1.jpg" class="d-block w-100" alt="Slide 1"
             style="height: 100vh; object-fit: cover;">
         </div>
         <div class="carousel-item">
-          <img src="../Asset/jumbotron2.png" class="d-block w-100" alt="Slide 2"
+          <img src="Asset/jumbotron2.png" class="d-block w-100" alt="Slide 2"
             style="height: 100vh; object-fit: cover;">
         </div>
         <div class="carousel-item">
-          <img src="../Asset/jumbotron3.png" class="d-block w-100" alt="Slide 3"
+          <img src="Asset/jumbotron3.png" class="d-block w-100" alt="Slide 3"
             style="height: 100vh; object-fit: cover;">
         </div>
       </div>
@@ -307,7 +307,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-  
+
   <!-- bagian gallery Grid -->
   <div class="container">
     <div class="d-flex justify-content-between">
