membulat kan button jumbotron

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <!-- Carousel Indicators -->
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#jumbotronCarousel" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#jumbotronCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#jumbotronCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          aria-current="true" aria-label="Slide 1" style="height: 10px; width: 10px;"></button>
+        <button type="button" data-bs-target="#jumbotronCarousel" data-bs-slide-to="1" aria-label="Slide 2" style="height: 10px; width: 10px;"></button>
+        <button type="button" data-bs-target="#jumbotronCarousel" data-bs-slide-to="2" aria-label="Slide 3" style="height: 10px; width: 10px;"></button>
       </div>
 
       <!-- Carousel Items -->
