--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
     <div class="container jumbotron-content">
       <h1 class="display-4 fw-bold">Transform Your Space<br>Elevate Your Lifestyle</h1>
       <p class="lead mt-3 mx-auto" style="max-width: 80%;">
-        Your dream interior design is now easier to realize. With a professional touch from our team, every corner of
+        Your dream interior design is now easier to realize. With a professional touch from our team, <br> every corner of
         your home will reflect your personality and lifestyle.
       </p>
-
-      <a href="#" class="btn-custom mt-4">Explore our Work <i class="fas fa-arrow-left"
+<br>
+<br>
+<br>
+      <a href="#" class="btn-custom mt-4 ">Explore our Work <i class="fas fa-arrow-left"
           style="transform: matrix(-0.71, 0.71, 0.71, 0.71, 0, 0);"></i></a>
     </div>
   </div>
